--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sass": "^1.77.6",
     "typescript": "^5.5.2"
   },
   "devDependencies": {
