--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.45.1",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "react": "^18.3.1",
