--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_MODE = 'development'
+VITE_MODE = 'production'
 
 VITE_API_KEY = '476cc3a4c52abf4331186de2ee1a83a5'
 VITE_API_HASH = '2fc9042bab941565f46d98d63f67ec35'
